--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node_modules/.bin/vite",
-    "build": "node_modules/.bin/tsc -b && vite build",
+    "build": "node_modules/.bin/tsc -b && vite build --base=/avatar-generator/dist/",
     "lint": "node_modules/.bin/eslint .",
     "preview": "node_modules/.bin/vite preview",
     "format": "prettier --write .",
